development - fix last issues of the Sonar, update refactor Execptions and publisher